; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/usbip/extr_vudc_tx.c_setup_ret_submit_pdu.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/usbip/extr_vudc_tx.c_setup_ret_submit_pdu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbip_header = type { i32 }
%struct.urbp = type { i32, i32 }

@USBIP_RET_SUBMIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usbip_header*, %struct.urbp*)* @setup_ret_submit_pdu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_ret_submit_pdu(%struct.usbip_header* %0, %struct.urbp* %1) #0 {
  %3 = alloca %struct.usbip_header*, align 8
  %4 = alloca %struct.urbp*, align 8
  store %struct.usbip_header* %0, %struct.usbip_header** %3, align 8
  store %struct.urbp* %1, %struct.urbp** %4, align 8
  %5 = load %struct.usbip_header*, %struct.usbip_header** %3, align 8
  %6 = getelementptr inbounds %struct.usbip_header, %struct.usbip_header* %5, i32 0, i32 0
  %7 = load i32, i32* @USBIP_RET_SUBMIT, align 4
  %8 = load %struct.urbp*, %struct.urbp** %4, align 8
  %9 = getelementptr inbounds %struct.urbp, %struct.urbp* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @setup_base_pdu(i32* %6, i32 %7, i32 %10)
  %12 = load %struct.usbip_header*, %struct.usbip_header** %3, align 8
  %13 = load %struct.urbp*, %struct.urbp** %4, align 8
  %14 = getelementptr inbounds %struct.urbp, %struct.urbp* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @USBIP_RET_SUBMIT, align 4
  %17 = call i32 @usbip_pack_pdu(%struct.usbip_header* %12, i32 %15, i32 %16, i32 1)
  ret void
}

declare dso_local i32 @setup_base_pdu(i32*, i32, i32) #1

declare dso_local i32 @usbip_pack_pdu(%struct.usbip_header*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
